--- a/fastlane/jetpack_metadata/id/release_notes.txt
+++ b/fastlane/jetpack_metadata/id/release_notes.txt
@@ -1,8 +1,8 @@
-- Stay informed! You can now receive a weekly summary of the activity on your most popular sites.
+- Tetap tahu kabar terbaru. Anda sekarang dapat menerima ringkasan mingguan terkait aktivitas di situs Anda yang paling populer.
 
-- You have even more control of your site comments — when you edit them you can now also adjust the author’s name, email address, and web address.
-We have made a couple of handy tweaks to the Block editor. The Embed block now gives you a sneak preview when you add something from YouTube or Twitter (more providers to come). Also, when you go to insert a block and nothing is found, there is now a no results view.
+- Komentar situs makin bisa diatur — saat mengedit komentar, Anda juga bisa menyesuaikan nama, alamat email, dan alamat web penulis.
+Kami melakukan beberapa penyesuaian bermanfaat untuk editor Blok. Blok Sematan sekarang dilengkapi pratinjau singkat untuk konten yang ditambahkan dari YouTube atau Twitter (penyedia lainnya akan hadir). Selain itu, sekarang saat blok dimasukkan dan tidak ada konten yang ditemukan, tampilan tidak ada hasil akan muncul.
 
-- If you go to Post Settings > Post Format, you will find the “Standard” option still at the top, but the other options are now neatly alphabetized below. (Options will vary with themes!)
+- Untuk opsi dalam Pengaturan Pos > Format Pos, "Standar" akan tetap menjadi opsi teratas, tetapi opsi lain kini akan ditampilkan urut sesuai abjad di bawahnya. (Opsi akan berbeda-beda tergantung tema!)
 
-- And one more quick one: Refreshing your site is now super easy — just pull to refresh from the My Site screen!
+- Dan satu lagi: Memuat ulang situs Anda kini sangat mudah — cukup tarik untuk memuat ulang dari layar Situs Saya!
