--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+18.4
+-----
+* [*] Improves our user images download logic to avoid synchronization issues. [#17197]
+
 18.3
 -----
 * [*] Fixed a bug on Reader that prevented Saved posts to be removed
